src/test/deca/context/invalid/homemade/duplicate_field.deca
// trying to declare class field twice

class A {
    int x;
    int x;
}